--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// 새로운 JSTL 의존성 추가
+	implementation 'javax.servlet:jstl:1.2'
+
 }
 
 tasks.named('test') {
